# bpp-popgen

./: .gitignore  AUTHORS  AUTHORS.txt  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  PopGen.spec  README.md  autoclean.sh  bpp-popgen-config.cmake.in  bpp-popgen.spec  configure.ac  configure.in  package.cmake.in
.reuse/: dep5
Pop/: AbstractIDataSet.cpp  AbstractIDataSet.h  AbstractODataSet.cpp  AbstractODataSet.h  AlleleInfo.cpp  AlleleInfo.h  AlleleInfoContainerExceptions.cpp  AlleleInfoContainerExceptions.h  AnalyzedLoci.cpp  AnalyzedLoci.h  AnalyzedSequences.cpp  AnalyzedSequences.h  BasicAlleleInfo.cpp  BasicAlleleInfo.h  BiAlleleMonolocusGenotype.cpp  BiAlleleMonolocusGenotype.h  CMakeLists.txt  Coord.h  CoordsTools.h  DarwinDon.cpp  DarwinDon.h  DarwinVarSingle.cpp  DarwinVarSingle.h  DataSet.cpp  DataSet.h  DataSetTools.cpp  DataSetTools.h  Date.cpp  Date.h  DiploidMonolocusGenotype.cpp  DiploidMonolocusGenotype.h  GeneMapperCsvExport.cpp  GeneMapperCsvExport.h  Genepop.cpp  Genepop.h  GeneralExceptions.cpp  GeneralExceptions.h  Genetix.cpp  Genetix.h  Genotype.cpp  (+52 more)
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt
src/Bpp/: Pop.all  PopGen.all
src/Bpp/Pop/: AbstractIDataSet.h  AbstractODataSet.h  AlleleInfo.h  AnalyzedLoci.cpp  AnalyzedLoci.h  AnalyzedSequences.cpp  AnalyzedSequences.h  BasicAlleleInfo.h  BiAlleleMonolocusGenotype.h  DarwinDon.cpp  DarwinVarSingle.cpp  DataSet.h  DataSetTools.cpp  GeneMapperCsvExport.cpp  GeneMapperCsvExport.h  Genepop.h  GeneralExceptions.cpp  GeneralExceptions.h  Genetix.cpp  Genetix.h  Group.cpp  Group.h  IDataSet.h  Individual.h  Locality.h  LocusInfo.cpp  LocusInfo.h  MonoAlleleMonolocusGenotype.h  MonolocusGenotype.h  MonolocusGenotypeTools.h  MultiAlleleMonolocusGenotype.h  MultiSeqIndividual.cpp  MultiSeqIndividual.h  MultilocusGenotype.h  MultilocusGenotypeStatistics.cpp  MultilocusGenotypeStatistics.h  ODataSet.h  PolymorphismMultiGContainer.h  PolymorphismMultiGContainerTools.cpp  PolymorphismMultiGContainerTools.h  (+5 more)
src/Bpp/PopGen/: AbstractODataSet.h  AlleleInfo.h  AnalyzedLoci.cpp  AnalyzedLoci.h  AnalyzedSequences.cpp  BasicAlleleInfo.cpp  BasicAlleleInfo.h  BiAlleleMonolocusGenotype.cpp  BiAlleleMonolocusGenotype.h  DarwinDon.cpp  DarwinDon.h  DarwinVarSingle.cpp  DarwinVarSingle.h  DataSet.cpp  DataSet.h  DataSetTools.h  Date.cpp  Date.h  GeneMapperCsvExport.cpp  GeneMapperCsvExport.h  Genepop.cpp  Genepop.h  GeneralExceptions.cpp  GeneralExceptions.h  Genetix.cpp  Genetix.h  Group.cpp  Group.h  IODataSet.h  Individual.cpp  Individual.h  LocusInfo.cpp  LocusInfo.h  MonoAlleleMonolocusGenotype.cpp  MonoAlleleMonolocusGenotype.h  MonolocusGenotype.h  MonolocusGenotypeTools.cpp  MonolocusGenotypeTools.h  MultiAlleleMonolocusGenotype.cpp  MultiAlleleMonolocusGenotype.h  (+19 more)
src/Bpp/PopGen/DataSet/: AnalyzedLoci.cpp  AnalyzedLoci.h  AnalyzedSequences.cpp  AnalyzedSequences.h  DataSet.cpp  DataSet.h  DataSetTools.cpp  DataSetTools.h  Date.cpp  Date.h  Group.cpp  Group.h  Individual.cpp  Individual.h  Locality.h  MultiSeqIndividual.cpp  MultiSeqIndividual.h
src/Bpp/PopGen/DataSet/Io/: AbstractIDataSet.cpp  AbstractIDataSet.h  AbstractODataSet.cpp  AbstractODataSet.h  IDataSet.h  IODataSet.h  ODataSet.h  PopgenlibIO.cpp  PopgenlibIO.h
src/Bpp/PopGen/DataSet/Io/Darwin/: DarwinDon.cpp  DarwinDon.h  DarwinVarSingle.cpp  DarwinVarSingle.h
src/Bpp/PopGen/DataSet/Io/GeneMapper/: GeneMapperCsvExport.cpp  GeneMapperCsvExport.h
src/Bpp/PopGen/DataSet/Io/Genepop/: Genepop.cpp  Genepop.h
src/Bpp/PopGen/DataSet/Io/Genetix/: Genetix.cpp  Genetix.h
