AC_INIT(Pop/Coord.h)
AM_INIT_AUTOMAKE(PopGenLib,0.1)
AC_LANG_CPLUSPLUS
AC_CHECK_LIB(utils,   main, , [AC_MSG_ERROR([Library utils not found.])])
AC_CHECK_LIB(numcalc, main, , [AC_MSG_ERROR([Library numcalc not found.])])
AC_CHECK_LIB(seq,     main, , [AC_MSG_ERROR([Library seq not found.])])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_OUTPUT(Makefile Pop/Makefile)
